--- a/sytle.css
+++ b/sytle.css
@@ -219,6 +219,13 @@ button:hover, .btn-item:hover {
   background-color: rgba(12, 11, 11, 0.5411764706);
 }
 
+.gameOn {
+  position: fixed !important;
+  width: 100% !important;
+  height: 100%;
+  background-color: rgba(12, 11, 11, 0.5411764706) !important;
+}
+
 @media only screen and (min-width: 721px) and (max-width: 1166px) {
   #navBar {
     background-color: #e7e5de;
