--- a/src/css/sytle.scss
+++ b/src/css/sytle.scss
@@ -27,7 +27,7 @@
 
 // Game presentation
 #indexBody {
-    background-image: url(multimedia/background.png);
+    background-image: url(../multimedia/background.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -82,7 +82,7 @@
 //In game
 
   .ingame {
-    background-image: url(multimedia/background.png);
+    background-image: url(../multimedia/background.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
