--- a/src/css/sytle.css
+++ b/src/css/sytle.css
@@ -1,26 +1,31 @@
 @font-face {
   font-family: RubikNormal;
-  src: url(fonts/Rubik-Medium.ttf);
+  src: url(../fonts/Rubik-Medium.ttf);
 }
 @font-face {
   font-family: RubikBold;
-  src: url(fonts/Rubik-Bold.ttf);
+  src: url(../fonts/Rubik-Bold.ttf);
 }
 @font-face {
   font-family: RubikItalic;
-  src: url(fonts/Rubik-SemiBoldItalic.ttf);
+  src: url(../fonts/Rubik-SemiBoldItalic.ttf);
 }
 @font-face {
   font-family: Play;
-  src: url(fonts/PlayfairDisplay-VariableFont_wght.ttf);
+  src: url(../fonts/PlayfairDisplay-VariableFont_wght.ttf);
 }
 @font-face {
   font-family: Lobster;
-  src: url(fonts/Lobster-Regular.ttf);
+  src: url(../fonts/Lobster-Regular.ttf);
 }
 * {
   margin: 0;
   padding: 0;
+}
+
+.webgl {
+  width: 100%;
+  height: 100%;
 }
 
 #indexBody {
@@ -72,6 +77,10 @@
   color: white;
 }
 
+#exampleModalLabel, .modal-body {
+  color: #0c0b0b;
+}
+
 .ingame {
   background-image: url(../multimedia/background.png);
   background-size: cover;
@@ -85,18 +94,13 @@ html, body {
   min-height: 100%;
 }
 
-body, div, form, input, select, p {
+.ingame, div, form, input, select, p {
   padding: 0;
   margin: 0;
   outline: none;
   font-family: Roboto, Arial, sans-serif;
   font-size: 16px;
   color: #eee;
-}
-
-body {
-  background: url("/uploads/media/default/0001/01/b5edc1bad4dc8c20291c8394527cb2c5b43ee13c.jpeg") no-repeat center;
-  background-size: cover;
 }
 
 h1, h2 {
@@ -173,7 +177,7 @@ option {
   border: none;
 }
 
-.btn-item, button {
+.btn-item, #start {
   padding: 10px 5px;
   margin-top: 20px;
   border-radius: 5px;
@@ -190,11 +194,11 @@ option {
   margin: 20px 5px 0;
 }
 
-button {
+#start {
   width: 100%;
 }
 
-button:hover, .btn-item:hover {
+#start:hover, .btn-item:hover {
   background: #e0b7b7;
   color: #0c0b0b;
 }
